{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 148,
  "lineage": "d0c13136-1758-644a-112c-2773195ec1de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:032742482605:instance/i-0b7758de39f225f87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7758de39f225f87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002de0910d420c760",
            "private_dns": "ip-10-0-16-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.16.55",
            "public_ip": "3.239.27.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051efc6e29024e2b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bf86d8c3da8bce1d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c515550c69abdb10",
            "tags": {
              "Name": "webapp"
            },
            "tags_all": {
              "Name": "webapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf86d8c3da8bce1d"
            ]
          },
          "dependencies": [
            "aws_security_group.webapp_sg",
            "aws_subnet.pub_sbn",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032742482605:internet-gateway/igw-0bd34848eff21424d",
            "id": "igw-0bd34848eff21424d",
            "owner_id": "032742482605",
            "tags": {
              "Description": "Web application IPv4 gateway",
              "Name": "webapp_igw"
            },
            "tags_all": {
              "Description": "Web application IPv4 gateway",
              "Name": "webapp_igw"
            },
            "vpc_id": "vpc-0bfc4e024e9109045"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp_pub_rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032742482605:route-table/rtb-04975c1895e3c5ca1",
            "id": "rtb-04975c1895e3c5ca1",
            "owner_id": "032742482605",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd34848eff21424d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd34848eff21424d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Web application public route table",
              "Name": "webapp_pub_rtbl"
            },
            "tags_all": {
              "Description": "Web application public route table",
              "Name": "webapp_pub_rtbl"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfc4e024e9109045"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp_igw",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp_pub_rtbl_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308d736c58fb2285",
            "route_table_id": "rtb-04975c1895e3c5ca1",
            "subnet_id": "subnet-0c515550c69abdb10"
          },
          "dependencies": [
            "aws_internet_gateway.webapp_igw",
            "aws_route_table.webapp_pub_rtbl",
            "aws_subnet.pub_sbn",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032742482605:security-group/sg-0bf86d8c3da8bce1d",
            "description": "Allow inbound traffic into web application VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf86d8c3da8bce1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webapp-tls-sg",
            "name_prefix": "",
            "owner_id": "032742482605",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webapp_tls_sg"
            },
            "tags_all": {
              "Name": "webapp_tls_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfc4e024e9109045"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sbn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032742482605:subnet/subnet-0197caf759974aba6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197caf759974aba6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "032742482605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Web application private subnet to manage resources to be kept private from public",
              "Name": "wba-private-sbn"
            },
            "tags_all": {
              "Description": "Web application private subnet to manage resources to be kept private from public",
              "Name": "wba-private-sbn"
            },
            "vpc_id": "vpc-0bfc4e024e9109045"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sbn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032742482605:subnet/subnet-0c515550c69abdb10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c515550c69abdb10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "032742482605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Web application public subnet to manage resources publicly accessible",
              "Name": "wba-public-sbn"
            },
            "tags_all": {
              "Description": "Web application public subnet to manage resources publicly accessible",
              "Name": "wba-public-sbn"
            },
            "vpc_id": "vpc-0bfc4e024e9109045"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032742482605:vpc/vpc-0bfc4e024e9109045",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ed8957d07cbb3b2",
            "default_route_table_id": "rtb-0a3cefacaa010f260",
            "default_security_group_id": "sg-07566f0270b06b209",
            "dhcp_options_id": "dopt-c276dbb8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfc4e024e9109045",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3cefacaa010f260",
            "owner_id": "032742482605",
            "tags": {
              "Description": "Web application VPC",
              "Name": "webapp-vpc"
            },
            "tags_all": {
              "Description": "Web application VPC",
              "Name": "webapp-vpc"
            }
          }
        }
      ]
    }
  ]
}